# OGS-QT-Launcher

./: .gitmodules  CMakeLists.txt  OGS-Launcher.pro  README.md  cmds.txt
src/: main.cpp  ogs.launcher.desktop
src/app/: myapp.cpp  myapp.h
